--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@tailwindcss/vite": "^4.1.18",
+    "cloudinary": "^2.9.0",
     "framer-motion": "^12.29.2",
     "install": "^0.13.0",
     "lucide-react": "^0.563.0",
